tests/e2e/return_no_object.error
Error: syntax error in story at line 1, column 1

1|    function foobar returns object
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

E0153: Return type cannot be `object`.
