tests/e2e/return_no_object.story
function foobar returns object
    return http server
